Bezier Hook to New Object does not work properly #40877

Closed
opened 2014-06-29 20:49:54 +02:00 by Jack J · 22 comments

System Information
ArchLinux 3.15.1-1-ARCH
GC: Nvidia GeForce 530 GT

Blender Version
Broken: 2.71 (Hash 9337574)
Worked: 2.70a (Hash f93bc76)

Bezier Hook to New Object does not work properly

Exact steps for others to reproduce the error

  1. Add a Bezier Curve
  2. Go to the Edit Mode
  3. Press V and select (Set Handle Type) to Vector
  4. Select left-one Handle point
  5. Extrude it by Z coord. (ex: E -> Z -> 2 -> Enter)
  6. Select the corner point of bezier curve
  7. Press Ctrl+H (Hooks) and choose "Hook to new object"

Now leave the Edit mode (back to Object Mode) and try to move newrly created Null object. You may see, that in 2.71 Null object doest not move the corner of the curve.

Not Work:
notwork.png

Work:
work.png

**System Information** ArchLinux 3.15.1-1-ARCH GC: Nvidia GeForce 530 GT **Blender Version** Broken: 2.71 (Hash 9337574) Worked: 2.70a (Hash f93bc76) Bezier Hook to New Object does not work properly **Exact steps for others to reproduce the error** 1) Add a Bezier Curve 2) Go to the Edit Mode 3) Press V and select (Set Handle Type) to Vector 4) Select left-one Handle point 5) Extrude it by Z coord. (ex: E -> Z -> 2 -> Enter) 6) Select the corner point of bezier curve 7) Press Ctrl+H (Hooks) and choose "Hook to new object" Now leave the Edit mode (back to Object Mode) and try to move newrly created Null object. You may see, that in 2.71 Null object doest not move the corner of the curve. Not Work: ![notwork.png](https://archive.blender.org/developer/F96023/notwork.png) Work: ![work.png](https://archive.blender.org/developer/F96025/work.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JackyJuice

Added subscriber: @JackyJuice
Author

2.71 version bug
bug.blend

2.71 version bug [bug.blend](https://archive.blender.org/developer/F96027/bug.blend)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The steps aren't that clear, not sure what you mean Extrude it by Z coord,
The other steps make sense but I can't redo the bug.

Could you include a blend file with the selection set, immediately before you add the hook?

Note that hooks on vector handles aren't likely to be so useful, but don't think we should prevent it, because you may add a hook, then change handle types its hard to completely avoid.
Nevertheless, if this is a bug, we should fix of course.

The steps aren't that clear, not sure what you mean **Extrude it by Z coord**, The other steps make sense but I can't redo the bug. Could you include a blend file with the selection set, immediately before you add the hook? Note that hooks on vector handles aren't likely to be so useful, but don't think we should prevent it, because you may add a hook, then change handle types its hard to completely avoid. Nevertheless, if this is a bug, we should fix of course.
Author

Hi campbellbarton, thx for your reply.

Here is the video that represents the bug:
bug.avi

And .blend file with the selection right before Ctrl+H:
bug.blend

Hi campbellbarton, thx for your reply. Here is the video that represents the bug: [bug.avi](https://archive.blender.org/developer/F96081/bug.avi) And .blend file with the selection right before Ctrl+H: [bug.blend](https://archive.blender.org/developer/F96082/bug.blend)
Author

And this is the video from ver 2.70a without the bug:
nobug.avi

And this is the video from ver 2.70a without the bug: [nobug.avi](https://archive.blender.org/developer/F96083/nobug.avi)

Checked with a recent build 2e840e56cf - and cant redo the bug. tested with bug.blend from post, https://developer.blender.org/T40877#9

Also checked with 2.71 release and it works too (adds hook where I'd expect, unlike the in bug.avi)

Could you check with an official 2.71 release build?

Checked with a recent build 2e840e56cf - and cant redo the bug. tested with `bug.blend` from post, https://developer.blender.org/T40877#9 Also checked with 2.71 release and it works too (adds hook where I'd expect, unlike the in bug.avi) Could you check with an official 2.71 release build?
Author

Im using an official build of blender.
But ok, i've downloaded new archive and tried with it. No changes, its working as before(not hooking to the right object).

But you can see the video above - its not my fantasy :)
So, may be its a bug with my other installed software? What information do you need to proove the bug?

I've got:
ArchLinux 3.15.1-1-ARCH
GC: Nvidia GeForce 530 GT
Python 3.4.1
gcc version 4.9.0 20140604 (prerelease) (GCC)
glibc 2.19-5
libglade 2.6.4-5
mesa 10.2.2-1
nvidia-libgl 337.25-2

Im using an official build of blender. But ok, i've downloaded new archive and tried with it. No changes, its working as before(not hooking to the right object). But you can see the video above - its not my fantasy :) So, may be its a bug with my other installed software? What information do you need to proove the bug? I've got: ArchLinux 3.15.1-1-ARCH GC: Nvidia GeForce 530 GT Python 3.4.1 gcc version 4.9.0 20140604 (prerelease) (GCC) glibc 2.19-5 libglade 2.6.4-5 mesa 10.2.2-1 nvidia-libgl 337.25-2

The issue reported can't be reproduced so far, and has been moved to the BF Blender: Unconfirmed project.
If 2 other people aren't able to redo the bug after 2 weeks, it will be closed.

We appreciate the effort that goes into making bug reports, but to be able to fix bugs we have to be able to redo them.

The issue reported can't be reproduced so far, and has been moved to the *BF Blender: Unconfirmed* project. If 2 other people aren't able to redo the bug after 2 weeks, it will be closed. We appreciate the effort that goes into making bug reports, but to be able to fix bugs we have to be able to redo them.

Added subscriber: @RJW

Added subscriber: @RJW

iMac OSX 10.9.3
ATI Radeon HD 4850 512 MB
Blender 2.71 #9337574
(Works in 2.70 #19e627c)

Can confirm. Some observations:

  • in edit mode, in the hook modifier pressing "Select" highlights the final control point in the bezier, not the one originally chosen to have the hook
  • if there are only 2 control points it works OK
  • in a chain of 4 control points, if both of the two middle points (points 2 & 3 in the curve) are type vector, it works if the third is chosen but not the second
  • if a second hook is added to the failing point it works

Then I got bored ;)

iMac OSX 10.9.3 ATI Radeon HD 4850 512 MB Blender 2.71 #9337574 (Works in 2.70 #19e627c) Can confirm. Some observations: - in edit mode, in the hook modifier pressing "Select" highlights the final control point in the bezier, not the one originally chosen to have the hook - if there are only 2 control points it works OK - in a chain of 4 control points, if both of the two middle points (points 2 & 3 in the curve) are type vector, it works if the third is chosen but not the second - if a second hook is added to the failing point it works Then I got bored ;)

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

Can confirm on 2.71 release linux x64

I also noticed that the hook empty is created a little off - not at the same position as the selected curve point.

Can confirm on 2.71 release linux x64 I also noticed that the hook empty is created a little off - not at the same position as the selected curve point.

Thanks for testing @GottfriedHofmann, moving back to bf-blender,
but strange I cant redo this on same build 2.71 release linux x64

Thanks for testing @GottfriedHofmann, moving back to bf-blender, but strange I cant redo this on same build `2.71 release linux x64`

Here is a short video where I reproduce the bug:

https://www.dropbox.com/s/0rn36elqkpx6aag/T40877.mp4

(download it, the web-player skips the last few and most important seconds)

Here is a short video where I reproduce the bug: https://www.dropbox.com/s/0rn36elqkpx6aag/T40877.mp4 (download it, the web-player skips the last few and most important seconds)

Added subscriber: @zeauro

Added subscriber: @zeauro

The hook is created at center of triangle selection (control points + its handles).

I can reproduce it, too. Simply pressing Assign button of modifier solves the problem.

I think being able to add a hook to Curve handles is an interesting feature.
In this case, for vector handles, it is irrelevant.
But think about animating a 2D Bezier Shape who looks like changing a 6 branches Star into a 6 petals Flower or dozen of waves with a stage set look, simply by transforming an empty.

Of course, something like that can be done by curve shapes. But it is more efficient to transform (move, scale, rotate) an empty than to create several shapes for that.

The hook is created at center of triangle selection (control points + its handles). I can reproduce it, too. Simply pressing Assign button of modifier solves the problem. I think being able to add a hook to Curve handles is an interesting feature. In this case, for vector handles, it is irrelevant. But think about animating a 2D Bezier Shape who looks like changing a 6 branches Star into a 6 petals Flower or dozen of waves with a stage set look, simply by transforming an empty. Of course, something like that can be done by curve shapes. But it is more efficient to transform (move, scale, rotate) an empty than to create several shapes for that.
Sergey Sharybin was assigned by Campbell Barton 2014-07-03 00:10:45 +02:00

@GottfriedHofmann, thanks for the video - I tried the exact same steps and it still works fine for me.

Assigning to Sergey to check

@GottfriedHofmann, thanks for the video - I tried the *exact* same steps and it still works fine for me. Assigning to Sergey to check

This issue was referenced by f4cf84507b

This issue was referenced by f4cf84507b4653c317f7df581f600175566cabcf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f4cf84507b.

Closed by commit f4cf84507b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40877
No description provided.