Fix T40877: Bezier Hook to New Object does not work properly